# ChangeLog for sys-apps/coreutils
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/coreutils/ChangeLog,v 1.389 2014/04/27 19:09:46 vapier Exp $

*coreutils-8.22-r1 (27 Apr 2014)

  27 Apr 2014; Mike Frysinger <vapier@gentoo.org> +coreutils-8.22-r1.ebuild:
  Include new arch(1) man page #507528. Add fix from upstream for cp behavior
  #508638. Skip test ls/stat-free-color #415487.

  27 Apr 2014; Mike Frysinger <vapier@gentoo.org> coreutils-8.22.ebuild:
  Rebuild man page tarball to include arch(1) #507528 by dwfreed.

  17 Jan 2014; Mike Frysinger <vapier@gentoo.org> coreutils-8.21.ebuild,
  coreutils-8.22.ebuild:
  Add arm64 keywords.

  17 Jan 2014; Mike Frysinger <vapier@gentoo.org> coreutils-8.21.ebuild:
  Mark m68k/s390/sh stable.

  15 Jan 2014; Agostino Sarubbo <ago@gentoo.org> coreutils-8.21.ebuild:
  Stable for ia64, wrt bug #467186

  04 Jan 2014; Lars Wendler <polynomial-c@gentoo.org> -coreutils-8.5.ebuild,
  -coreutils-8.5-r1.ebuild, -coreutils-8.7.ebuild, -coreutils-8.8.ebuild,
  -coreutils-8.9.ebuild, -coreutils-8.10.ebuild, -coreutils-8.11.ebuild,
  -coreutils-8.12.ebuild, -coreutils-8.13.ebuild, -coreutils-8.14.ebuild,
  -coreutils-8.15.ebuild, -coreutils-8.16.ebuild, -coreutils-8.17.ebuild,
  -coreutils-8.18.ebuild, -coreutils-8.19.ebuild, -coreutils-8.20-r1.ebuild,
  -coreutils-8.20-r2.ebuild:
  Removed old versions and files.

  24 Dec 2013; Agostino Sarubbo <ago@gentoo.org> coreutils-8.21.ebuild:
  Stable for x86, wrt bug #467186

  23 Dec 2013; Markus Meier <maekke@gentoo.org> coreutils-8.21.ebuild:
  arm stable, bug #467186

  23 Dec 2013; Agostino Sarubbo <ago@gentoo.org> coreutils-8.21.ebuild:
  Stable for sparc, wrt bug #467186

  23 Dec 2013; Pacho Ramos <pacho@gentoo.org> coreutils-8.21.ebuild:
  amd64 stable, bug #467186

  22 Dec 2013; Agostino Sarubbo <ago@gentoo.org> coreutils-8.21.ebuild:
  Stable for ppc64, wrt bug #467186
