@@ -12,24 +12,24 @@ DIST coreutils-8.22-patches-1.1.tar.xz 7840 SHA256 4c45cca7950bbd278db23318916e5
 DIST coreutils-8.22.tar.xz 5335124 SHA256 5b3e94998152c017e6c75d56b9b994188eb71bf46d4038a642cb9141f6ff1212 SHA512 2f14c2cab7001297309b4774bf3d610ecbaaec7d98d68e3792b24d2b52d319c4e30e55f803e56c48b9b9a1b76eb1c9636be5444fe1dc1dbcdd6150cfcb34847f WHIRLPOOL 1b8e3f1cf12f7975e8d80b9ddab132937b2fffaca8c85ac1fefddb5fe277a63a7aa9c6f0f93d8f5a93d5af378b3cf3573222db8e1da918152b9fb7eff1352238
 EBUILD coreutils-8.20.ebuild 5884 SHA256 b4513676d9e4479a80b891d5586a66200c845e1be0537f5a3e554cebc4efc780 SHA512 889a107a2ceb85877749ed911e33e5ab47b31a7d2a952493b1e2a44395e18758f8f7d4e59708b7b5168957a89f5da3a2887125ffb6a61a8fb0c1c6326ecb819e WHIRLPOOL 65b636b8fe4f3d35cb26698d6f9e468ceea538f197ed08b3b27ef049037291f7d786c2a161b7a53bbc0828f75fdd43d40bd3461bcd5f6a23786cd901d4a1c0b9
 EBUILD coreutils-8.21.ebuild 6007 SHA256 f8bd0ef05a48bb1832a537fd066de878e3aa9abf92640d8e904eefc7b7fe2676 SHA512 c1801a06fd9061f7fc8ef3c0e7880b2edca02bb8f0087c6890bb550a2c709ff555d0cd26e3819e524d010306d2d12f597b1d128eb85d8cd6cf98efee560b9f4d WHIRLPOOL d9137957b902a1ded882ad83ed26c71d7e5deb05df1dc4b93af2b22282554dbe9d1642db303c41bab5fb75c42f36fb36c6c193998f395f460087a07f44e9dea2
-EBUILD coreutils-8.22-r1.ebuild 5957 SHA256 325659f574ff1c53503d3d0a649334f49a9c6cc1e0370d9cd1ec5fe7f5eb75d8 SHA512 265fba3c8b2205c3ae0a27abb13598192322b940379f3f40bf377f6f843f9be9531097ff7fbaadd258d1a9abe1f276d9d5100520ddd88cba12989c0a95c6e791 WHIRLPOOL 5317ef27880534be049f496e03253f7f73ad0691ede24e79ce577f299fb431171a526832756a49e3155eabb3f83ac093b9f6e15e433dec2f7701c456b3aa8cbf
+EBUILD coreutils-8.22-r1.ebuild 5653 SHA256 a4e9e109f0e8a038d11f80e4195374e3042a6a9fb6adb3a4d74f97aa95ac8513 SHA512 06267a4698fee07f069a4453e9317e19ad8015e1c54935054603c52d3f2984d30c24fd53e964e26cc17aa32e468db1218f8c0becead597c691bd0ec07a5b1075 WHIRLPOOL 77f9053d021398bc1dea0ef41830782e3dce1291115f3ca24057d861e041ce22a0bff2e544c81d53da52f23265cb9b7050b9f6ff30838c4566a13b963544deaf
 EBUILD coreutils-8.22.ebuild 5954 SHA256 8112079942b2f1098118f3ca5d1764649933c82212009e4e959c537e69424606 SHA512 c089bec9a24c58ac3920a2ced3a72029386d15528176cc42a8b0295b0d17d695ceb2008a0ae043d259e04587a045bd640b475c77903dbe91bbda979638f1359a WHIRLPOOL 4aaa054cefed7b105812f5fcf07e6e33d6abb968df1e13b3d8ac97a06a6d979c9ff2bbcf08a6afbe87f2094229e2a895553f7ea7b0349017327f6879dda76961
-MISC ChangeLog 55341 SHA256 9935a596c3d2fce78d1ce42fff440f80e7c5a90ffa26384f87bd699595681136 SHA512 5855e45a8257ac449507ba4f44634690c290f01a82ee61027f849bf3c3741569a829bfe1e0f48ffaaadd5f0841d87cc6c6a0a1ca185f1880dfaea3e414ade300 WHIRLPOOL 9cdbe3b2b2d46c5dc8e4b86c5d8fbbd02582b107d4a5a86aabfc0ac2f72b873e0a87808a950dc0d7492d48afc43b4df45efc04f9032596198a1f61c6de1c6c86
+MISC ChangeLog 55534 SHA256 e9079e1e6d355db3c311c2cf407ca96f917af0bdeaa0a41fe9ffa4b74e40915a SHA512 039b46ae9cdb4b335e77c27fa72b8f72aa7e1752db6bc5b605a84f58d544135004654014063a01eeacbffab05e0d270f8834790bde66a7fb82786850cc4d7404 WHIRLPOOL ad0d0066fa400955d0209f752a7189619c7baddf52e1ffe8d3017f6164063abbd8b439e1de05fe312525680286a4174c3c7e6b0bb294016064c683ad63c7edeb
 MISC metadata.xml 244 SHA256 dd89355bb7a4485592e15da6c3829bfbdd6c87d6d1e3782c69e3beb948f244d8 SHA512 02efd3c89a02921efb74129d5c82bed1bad0b2c9f338b0ef87feb831c888fb212b5e609ecf0a602e1b628dc341528910e2f6261f91c1670602d73aad8a54b0d9 WHIRLPOOL aa9bb37b68838172196163bc310b12d0e57be1a1d4d7a80fc25eb96d163c6249751a1871cdf35e66e0d3e50eb3c596c1916e7c3649ba1daf0a0926ab2646fa63
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQIcBAEBCAAGBQJTXVX/AAoJEPGu1DbS6WIAA1wP/i9touhsNHainAW7WwJBMr02
-SUGXQauETAwnYB76jDUggEqNDxxWZyTUsCHWXXEyl7SsXSbEZi8j9yoTyiG+4X8Y
-2F/SSXWLwkH9POGHB/rGYo4gJmKT50D74gvD6MiA+r+anu/1jmA4Fizx4J39DQwq
-yTTAVqvwyj0e+0Ik5wi9QqrOqK9Iwd8b6eX/urwHdqHpufcsCdySWydzWs9S5RTB
-Co0Yrsuy2n0hB22LA2+XR2MHIRlPxBXhHglEWDh85dFTzvZYy3ptFuJrNVXAXoKJ
-HZbeNKYSXZSJvcY8SeW+aXiSX79EmwucMxbipIlZFQjgzLeX/nXJDnwV4P1ECzHc
-c0DDQQdL2RxpKlVllF9pJGweqsZjggKkwK3ry+Pgv/hVjTlIB7mc1T2MjH1xxviB
-aAJu6WWY+7ZG48TsuXLqgeP7Tb93zyzdRncnzvJcNrf4VJWhkLN3jgbbBkWrHbaw
-RYaTjVNwSTYhSKaHQ3zHLaggjOgRn3gw90dbQUtoCS1bmvuuHFB5lAHfdqL/urzQ
-obft8+JePiVZL5DpojcirMSFdxNPvmr6r93DqdfqIqSxEVTnf0sq2ovY3O8asLez
-82T2OT0gawLaena4Iw4xNS0TBKFKx/MElkd/fd7C/wmQnrOjtcwUzH8+ctDep/gU
-XioQTCdbU8zuc5hmTrDp
-=rcZH
+iQIcBAEBCAAGBQJTa94UAAoJEPGu1DbS6WIA3p8P/1otUIIZDqH+KUVUgxX+4e7Z
+6aQ2NN46wEEUo+NbYFo2rR8/hW39D9AiYPdXWIH7/NdCLlxvxTCb1zDHEx1RIemK
+knOR9KFgYYXxqJutuF3jlG6gd2+UtsOrqIw+Y6gnU+lvK85Q/ocFk4NL++HDKAKQ
+hwsvcPz7nouRT5J27XacxY+v+djEY0s652iBImysY9IKIfTV9akduOylxxAa45hX
+mCG0QzvkT4gdViZ9+RiNWWsVvoU8wJht6ZRh1LFsh0m8aofkQ+TeAKqRTKFm+DdD
++a57DBZ0wsYvcTkqwdINXOcyFFQNatRUH3svpY3l5kDJgrR9ES49Mq54cp7+7SnN
+c3MEW1Svw619V3I69ceI1jjp5r2a5/seb3fctpcQnFsiSl5++6cYZA7BSNAvo7ND
+g4DsxAcebwR5JTaicpRx3P/NW80zvZ/wFs5Q5x9psETeREsYO3z6d2JP1+THFLOZ
+2udUcsP+UxPV47T68xALqaxbimd9wp+hl3fklrjzoWLlvi1AP+lfN4R59YKCrGJj
+jf44IkaRBkAcUFiA9waQfdsgRFAC952eYwERSX+2ab7yOYgWRmveUocTCCo8GHI+
+vdF2t6Fmb07dE37nKtrTBqj/jBCnVEkvWYun/Sja6vsCOv72i01DMpD1xvpRDL/9
+GFe7dzv2eNB/q2kFvto/
+=RHev
 -----END PGP SIGNATURE-----
