@@ -1,6 +1,10 @@
 # ChangeLog for sys-apps/coreutils
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/coreutils/ChangeLog,v 1.389 2014/04/27 19:09:46 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/coreutils/ChangeLog,v 1.390 2014/05/08 19:42:07 vapier Exp $
+
+  08 May 2014; Mike Frysinger <vapier@gentoo.org> coreutils-8.22-r1.ebuild:
+  Drop old migration logic as we have moved way beyond it and it causes issues
+  with /usr merge #509596 by Duncan.
 
 *coreutils-8.22-r1 (27 Apr 2014)
 
